--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" href="/Sprites/favicon.ico" sizes="32x32" type="image/png">
+    <link rel="icon" href="./Sprites/favicon.ico" sizes="32x32" type="image/png">
     <title>The Legend Of Ironhacker!</title>
 
 </head>
@@ -30,7 +30,7 @@
     </script>
 
 
-    <script src='logic2.js'></script>
+    <script src='./logic2.js'></script>
 </body>
 
 </html>
