--- a/index.html
+++ b/index.html
@@ -16,7 +16,32 @@
 
     <div class="text-center">
         
-
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#staticBackdrop">
+    Instructions
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">How to play?</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            The controls are so simple:
+            Use the arrow keys to move wherever you want and the key 'P' to attack, try to survive as much as you can, but I have to warn, it's harder than you think.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Okey</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
         <canvas id="example"></canvas>
     </div>
     <button type="button" id="start-button" class="btn btn-outline-danger">Start Game!</button>
