--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property='og:title' content='The Legend of Ironhacker'/>
+    <meta property='og:image' content='./Sprites/The Legend of Ironhacker.png'/>
+    <meta property='og:description' content='Game content media'/>
+    <meta property='og:url' content='https://christian-ares.github.io/The-Legend-of-Ironhacker/'/>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
