--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property='og:title' content='The Legend of Ironhacker'/>
-    <meta property='og:image' content='./Sprites/The Legend of Ironhacker.png'/>
+    <meta property='og:image' content='./Sprites/The-Legend-of-Ironhacker.png'/>
     <meta property='og:description' content='Game content media'/>
     <meta property='og:url' content='https://christian-ares.github.io/The-Legend-of-Ironhacker/'/>
 
